--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
-	"name": "landing-cuestionable",
-	"type": "module",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "astro dev",
-		"build": "astro build",
-		"preview": "astro build && wrangler pages dev",
-		"astro": "astro",
-		"deploy": "astro build && wrangler pages deploy",
-		"cf-typegen": "wrangler types"
-	},
-	"dependencies": {
-		"@astrojs/cloudflare": "^12.6.12",
-		"astro": "^5.16.2"
-	},
-	"devDependencies": {
-		"@types/node": "^24.10.1",
-		"wrangler": "^4.51.0"
-	}
+  "name": "landing-cuestionable",
+  "type": "module",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro build && wrangler pages dev",
+    "astro": "astro",
+    "deploy": "astro build && wrangler pages deploy",
+    "cf-typegen": "wrangler types"
+  },
+  "dependencies": {
+    "@astrojs/cloudflare": "^12.6.12",
+    "@astrojs/vue": "^5.1.3",
+    "@tailwindcss/vite": "^4.1.17",
+    "@vueuse/core": "^14.1.0",
+    "astro": "^5.16.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.555.0",
+    "reka-ui": "^2.6.0",
+    "tailwind-merge": "^3.4.0",
+    "swiper": "^12.0.3",
+    "tailwindcss": "^4.1.17",
+    "vue": "^3.5.25"
+  },
+  "devDependencies": {
+    "@types/node": "^24.10.1",
+    "tw-animate-css": "^1.4.0",
+    "wrangler": "^4.51.0"
+  }
 }
