--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.6.12",
+    "@astrojs/sitemap": "^3.6.0",
     "@astrojs/vue": "^5.1.3",
     "@tailwindcss/vite": "^4.1.17",
     "@vueuse/core": "^14.1.0",
@@ -19,9 +20,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.555.0",
-    "reka-ui": "^2.6.0",
-    "tailwind-merge": "^3.4.0",
+    "reka-ui": "^2.6.1",
     "swiper": "^12.0.3",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.25"
   },
